Changes in Release 2.4.1
=============================================
[JOST-134] - Static helper classes should not use static Loggers
[JOST-137] - Option for BasicSAMLArtifactMapEntryFactory to explicitly serialize the SAML message in the newly created entry
[JOST-139] - Update libs for 2.4.1

Changes in Release 2.4.0
=============================================
[JOST-36]  - XACML marshallers and unmarshallers should extend abstract superclasses
[JOST-63] - Investigate whether a fatal metadata filter error can be made to not cause a fatal error in the provider
[JOST-88]  - Create an AttributeConsumingServiceSelector, similar in API to the existing Basic- and AuthnRequest Endpoint selectors
[JOST-100] - BaseMessageDecoder uses java.net.URL equals() for URI comparison
[JOST-102] - don't download remote metadata if it hasn't changed
[JOST-106] - Improved logging when configuration / metadata reloaded
[JOST-107] - cached metadata should include XML comments
[JOST-108] - Metadata provider should ignore SSL server cert (at least optionally)
[JOST-109] - The IDP should verify that the fetched metadata is valid, even after filters, before overwriting the previous one
[JOST-110] - Clean up Basic- artifact map and entry or add alternative implementations
[JOST-111] - control metadata load with a scheduled job rather than on demand
[JOST-112] - Overuse of InclusivePrefixes list when signing
[JOST-116] - QueryDescriptorTypeImpl.getOrderedChildren() does not include children from superclass
[JOST-118] - Configure Apache XML Security library to not emit line breaks by default
[JOST-122] - Consent value mismatch
[JOST-123] - Use of invalide metadata results in strange error from RequiredValidUntil filter
[JOST-124] - Metadata providers could log a warning if the initial metadata they get is expired
[JOST-125] - FileBackedHTTPMetadataProvider stops reloading metadata under certain conditions
[JOST-126] - Declare all non-visibly used namespaces on a signed SignableSAMLObject